검색에 버튼 stack view에 삽입

--- a/NewlyConinedWord/NewlyCoinedWord/AutoLayoutPractice.storyboard
+++ b/NewlyConinedWord/NewlyCoinedWord/AutoLayoutPractice.storyboard
@@ -28,33 +28,47 @@
                                     <action selector="tapTextFieldKeyboard:" destination="prS-ly-NIB" eventType="editingDidEndOnExit" id="l00-aS-Jnv"/>
                                 </connections>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rzp-Cq-EiP">
-                                <rect key="frame" x="20" y="147" width="69" height="35"/>
-                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="뉴진스"/>
-                                <connections>
-                                    <action selector="wordButtonTapped:" destination="prS-ly-NIB" eventType="touchUpInside" id="gBP-WK-dmI"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9ui-W9-NeY">
-                                <rect key="frame" x="97" y="147" width="98" height="35"/>
-                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="알잘딱깔센"/>
-                                <connections>
-                                    <action selector="wordButtonTapped:" destination="prS-ly-NIB" eventType="touchUpInside" id="zwK-zl-asA"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xTd-js-fCh">
-                                <rect key="frame" x="203" y="147" width="69" height="35"/>
-                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="별다줄"/>
-                                <connections>
-                                    <action selector="wordButtonTapped:" destination="prS-ly-NIB" eventType="touchUpInside" id="ODn-3w-HZr"/>
-                                </connections>
-                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="yrq-7C-tM4">
+                                <rect key="frame" x="20" y="147" width="312" height="34.333333333333343"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rzp-Cq-EiP">
+                                        <rect key="frame" x="0.0" y="0.0" width="68.333333333333329" height="34.333333333333336"/>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="뉴진스"/>
+                                        <connections>
+                                            <action selector="wordButtonTapped:" destination="prS-ly-NIB" eventType="touchUpInside" id="gBP-WK-dmI"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9ui-W9-NeY">
+                                        <rect key="frame" x="76.333333333333314" y="0.0" width="97.666666666666686" height="34.333333333333336"/>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="알잘딱깔센"/>
+                                        <connections>
+                                            <action selector="wordButtonTapped:" destination="prS-ly-NIB" eventType="touchUpInside" id="zwK-zl-asA"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xTd-js-fCh">
+                                        <rect key="frame" x="182" y="0.0" width="68.333333333333314" height="34.333333333333336"/>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="별다줄"/>
+                                        <connections>
+                                            <action selector="wordButtonTapped:" destination="prS-ly-NIB" eventType="touchUpInside" id="ODn-3w-HZr"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QC5-31-LYH">
+                                        <rect key="frame" x="258.33333333333331" y="0.0" width="53.666666666666686" height="34.333333333333336"/>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="실매"/>
+                                        <connections>
+                                            <action selector="wordButtonTapped:" destination="prS-ly-NIB" eventType="touchUpInside" id="Flq-P9-vxk"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rfv-Ta-Qio">
                                 <rect key="frame" x="323" y="89" width="50" height="50"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -71,23 +85,14 @@
                                     <action selector="searchButtonTapped:" destination="prS-ly-NIB" eventType="touchUpInside" id="95L-8L-Vjm"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QC5-31-LYH">
-                                <rect key="frame" x="280" y="147" width="54" height="35"/>
-                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="실매"/>
-                                <connections>
-                                    <action selector="wordButtonTapped:" destination="prS-ly-NIB" eventType="touchUpInside" id="Flq-P9-vxk"/>
-                                </connections>
-                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KDk-ua-rRt">
                                 <rect key="frame" x="20" y="262" width="353" height="156"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="JKm-Tl-9DJ">
                                         <rect key="frame" x="0.0" y="0.0" width="353" height="156"/>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZbX-zl-S7m">
-                                        <rect key="frame" x="8" y="0.0" width="337" height="156"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZbX-zl-S7m">
+                                        <rect key="frame" x="0.0" y="0.0" width="337" height="156"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -111,22 +116,17 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="rzp-Cq-EiP" firstAttribute="leading" secondItem="RMP-Mx-EvJ" secondAttribute="leading" id="2OI-Da-Wy8"/>
                             <constraint firstItem="RMP-Mx-EvJ" firstAttribute="leading" secondItem="Uke-az-EpR" secondAttribute="leading" constant="20" id="65m-KQ-vIs"/>
-                            <constraint firstItem="xTd-js-fCh" firstAttribute="leading" secondItem="9ui-W9-NeY" secondAttribute="trailing" constant="8" id="AYw-gK-bYc"/>
+                            <constraint firstItem="yrq-7C-tM4" firstAttribute="top" secondItem="RMP-Mx-EvJ" secondAttribute="bottom" constant="8" id="DMn-ir-d36"/>
+                            <constraint firstItem="yrq-7C-tM4" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="Uke-az-EpR" secondAttribute="trailing" constant="-8" id="Fws-ub-Bj7"/>
                             <constraint firstItem="KDk-ua-rRt" firstAttribute="leading" secondItem="Uke-az-EpR" secondAttribute="leading" constant="20" id="Hza-R4-jbf"/>
                             <constraint firstItem="Rfv-Ta-Qio" firstAttribute="top" secondItem="RMP-Mx-EvJ" secondAttribute="top" id="L5P-gT-yxg"/>
                             <constraint firstItem="RMP-Mx-EvJ" firstAttribute="top" secondItem="Uke-az-EpR" secondAttribute="top" constant="30" id="PfN-iZ-z8d"/>
                             <constraint firstItem="Uke-az-EpR" firstAttribute="trailing" secondItem="KDk-ua-rRt" secondAttribute="trailing" constant="20" id="Qn2-ww-fIs"/>
-                            <constraint firstItem="rzp-Cq-EiP" firstAttribute="top" secondItem="RMP-Mx-EvJ" secondAttribute="bottom" constant="8" id="TJy-cf-7vY"/>
-                            <constraint firstItem="QC5-31-LYH" firstAttribute="leading" secondItem="xTd-js-fCh" secondAttribute="trailing" constant="8" id="Tev-d8-lZw"/>
-                            <constraint firstItem="xTd-js-fCh" firstAttribute="top" secondItem="9ui-W9-NeY" secondAttribute="top" id="b4l-db-DRk"/>
+                            <constraint firstItem="yrq-7C-tM4" firstAttribute="leading" secondItem="RMP-Mx-EvJ" secondAttribute="leading" id="TML-LR-Ecf"/>
+                            <constraint firstItem="KDk-ua-rRt" firstAttribute="top" secondItem="yrq-7C-tM4" secondAttribute="bottom" constant="80.666666666666657" id="Z7n-cd-nC3"/>
                             <constraint firstItem="Uke-az-EpR" firstAttribute="trailing" secondItem="Rfv-Ta-Qio" secondAttribute="trailing" constant="20" id="bxY-ym-EWZ"/>
                             <constraint firstItem="Rfv-Ta-Qio" firstAttribute="leading" secondItem="RMP-Mx-EvJ" secondAttribute="trailing" id="cWN-pg-5iJ"/>
-                            <constraint firstItem="9ui-W9-NeY" firstAttribute="leading" secondItem="rzp-Cq-EiP" secondAttribute="trailing" constant="8" id="faY-qz-6Ub"/>
-                            <constraint firstItem="QC5-31-LYH" firstAttribute="top" secondItem="xTd-js-fCh" secondAttribute="top" id="k9v-Zh-ZOI"/>
-                            <constraint firstItem="9ui-W9-NeY" firstAttribute="top" secondItem="RMP-Mx-EvJ" secondAttribute="bottom" constant="8" id="lRW-v7-6pg"/>
-                            <constraint firstItem="KDk-ua-rRt" firstAttribute="top" secondItem="rzp-Cq-EiP" secondAttribute="bottom" constant="80" id="vS2-x0-GLj"/>
                         </constraints>
                         <connections>
                             <outletCollection property="gestureRecognizers" destination="dX3-Ip-MsF" appends="YES" id="8Fr-EU-FJz"/>
