빈칸 한글자 기입 시 alert 표시

--- a/NewlyConinedWord/NewlyCoinedWord/AutoLayoutPractice.storyboard
+++ b/NewlyConinedWord/NewlyCoinedWord/AutoLayoutPractice.storyboard
@@ -91,8 +91,8 @@
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="JKm-Tl-9DJ">
                                         <rect key="frame" x="0.0" y="0.0" width="353" height="156"/>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZbX-zl-S7m">
-                                        <rect key="frame" x="0.0" y="0.0" width="337" height="156"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="검색어를 입력해주세요!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZbX-zl-S7m">
+                                        <rect key="frame" x="8" y="0.0" width="337" height="156"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
